--- a/gestao/templates/admin_custom/cotacoes_voo.html
+++ b/gestao/templates/admin_custom/cotacoes_voo.html
@@ -13,7 +13,7 @@
                     <th>Cliente</th>
                     <th>Origem</th>
                     <th>Destino</th>
-                    <th>Data Voo</th>
+                    <th>Data Ida</th>
                     <th>Valor Parcelado</th>
                     <th>Valor à Vista</th>
                     <th>Status</th>
@@ -26,7 +26,7 @@
                     <td>{{ c.cliente.usuario.get_full_name|default:c.cliente.usuario.username }}</td>
                     <td>{{ c.origem }}</td>
                     <td>{{ c.destino }}</td>
-                    <td>{{ c.data_voo|date:"d/m/Y" }}</td>
+                    <td>{{ c.data_ida|date:"d/m/Y H:i" }}</td>
                     <td>R$ {{ c.valor_parcelado|floatformat:2 }}</td>
                     <td>R$ {{ c.valor_vista|floatformat:2 }}</td>
                     <td>{{ c.get_status_display }}</td>
