--- a/gestao/templates/admin_custom/emissoes.html
+++ b/gestao/templates/admin_custom/emissoes.html
@@ -69,8 +69,8 @@
                     <td>{{ e.programa }}</td>
                     <td>{{ e.aeroporto_partida }}</td>
                     <td>{{ e.aeroporto_destino }}</td>
-                    <td>{{ e.data_ida|date:"d/m/Y" }}</td>
-                    <td>{{ e.data_volta|date:"d/m/Y" }}</td>
+                    <td>{{ e.data_ida|date:"d/m/Y H:i" }}</td>
+                    <td>{{ e.data_volta|date:"d/m/Y H:i" }}</td>
                     <td>{{ e.qtd_passageiros }}</td>
                     <td>{{ e.companhia_aerea }}</td>
                     <td>{{ e.localizador }}</td>
