--- a/gestao/templates/admin_custom/cotacoes_voo.html
+++ b/gestao/templates/admin_custom/cotacoes_voo.html
@@ -16,6 +16,8 @@
                     <th>Data Ida</th>
                     <th>Valor Parcelado</th>
                     <th>Valor à Vista</th>
+                    <th>Valor Referencia</th>
+                    <th>Economia de até</th>
                     <th>Status</th>
                     <th></th>
                 </tr>
@@ -29,6 +31,8 @@
                     <td>{{ c.data_ida|date:"d/m/Y H:i" }}</td>
                     <td>R$ {{ c.valor_parcelado|floatformat:2 }}</td>
                     <td>R$ {{ c.valor_vista|floatformat:2 }}</td>
+                    <td>R$ {{ c.valor_passagem|floatformat:2 }}</td>
+                    <td>R$ {{ c.economia|floatformat:2 }}</td>
                     <td>{{ c.get_status_display }}</td>
                     <td><a href="{% url 'admin_editar_cotacao_voo' c.id %}" style="color:#b67cff;">Editar</a></td>
                 </tr>
