add audiotria e correção formulario cliente

--- a/gestao/templates/admin_custom/cliente_form.html
+++ b/gestao/templates/admin_custom/cliente_form.html
@@ -1,4 +1,6 @@
 {% extends "admin_custom/base_admin.html" %}
+{% load static %}
+
 {% block title %}Novo Cliente{% endblock %}
 {% block header_title %}Novo Cliente{% endblock %}
 {% block menu_clientes %}bg-zinc-700 text-white{% endblock %}
