--- a/gestao/templates/admin_custom/form_cliente.html
+++ b/gestao/templates/admin_custom/form_cliente.html
@@ -1,12 +1,12 @@
 {% extends "admin_custom/base_admin.html" %}
 {% load static %}
 
-{% block title %}Novo Cliente{% endblock %}
-{% block header_title %}Novo Cliente{% endblock %}
+{% block title %}{% if form.instance.pk %}Editar Cliente{% else %}Novo Cliente{% endif %}{% endblock %}
+{% block header_title %}{% if form.instance.pk %}Editar Cliente{% else %}Novo Cliente{% endif %}{% endblock %}
 {% block menu_clientes %}bg-zinc-700 text-white{% endblock %}
 
 {% block extra_head %}
-<link rel="stylesheet" href="{% static 'gestao/formulario_cliente.css' %}">
+<link rel="stylesheet" href="{% static 'gestao/formularios_base_gestao.css' %}">
 {% endblock %}
 
 {% block content %}
