--- a/gestao/templates/admin_custom/aeroportos.html
+++ b/gestao/templates/admin_custom/aeroportos.html
@@ -1,4 +1,6 @@
 {% extends "admin_custom/base_admin.html" %}
+{% load static %}
+
 {% block title %}Aeroportos{% endblock %}
 {% block header_title %}Aeroportos{% endblock %}
 {% block menu_aeroportos %}bg-zinc-700 text-white{% endblock %}
