--- a/gestao/templates/admin_custom/programas.html
+++ b/gestao/templates/admin_custom/programas.html
@@ -1,4 +1,6 @@
 {% extends "admin_custom/base_admin.html" %}
+{% load static %}
+
 {% block title %}Programas{% endblock %}
 {% block header_title %}Programas de Pontos{% endblock %}
 {% block menu_programas %}bg-zinc-700 text-white{% endblock %}
