--- a/gestao/templates/admin_custom/cotacoes.html
+++ b/gestao/templates/admin_custom/cotacoes.html
@@ -23,6 +23,7 @@
                 <th class="p-2 text-left font-medium">Programa</th>
                 <th class="p-2 text-left font-medium">Cotação Mercado</th>
                 <th class="p-2 text-left font-medium">Última atualização</th>
+                <th class="p-2 text-left font-medium">Ações</th>
             </tr>
         </thead>
         <tbody>
@@ -31,10 +32,11 @@
                 <td class="p-2">{{ cot.programa_nome }}</td>
                 <td class="p-2">R$ {{ cot.valor_mercado|floatformat:2 }}</td>
                 <td class="p-2">{{ cot.atualizado_em|date:"d/m/Y" }}</td>
+                <td class="p-2"><a href="{% url 'admin_deletar_cotacao' cot.id %}" class="text-blue-400">Deletar</a></td>
             </tr>
             {% empty %}
             <tr>
-                <td colspan="3" class="text-center text-red-400 py-4">Nenhuma cotação cadastrada.</td>
+                <td colspan="4" class="text-center text-red-400 py-4">Nenhuma cotação cadastrada.</td>
             </tr>
             {% endfor %}
         </tbody>
